Remove the increment decrement buttons from the Amount input box

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,4 +69,14 @@
     display: flex;
     flex-direction: column;
   }
+
+  /* Hide spinner buttons on number inputs */
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
 }
